--- a/package.json
+++ b/package.json
@@ -1,1 +1,1 @@
-{"name":"vectorvision","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"next":"14.2.0","node-fetch":"^3.3.0","potrace":"^2.1.1","react":"18.2.0","react-dom":"18.2.0","sharp":"^0.33.0","uuid":"^9.0.0"}}
+{"name":"vectorvision","version":"1.0.0","private":true,"scripts":{"dev":"next dev","build":"next build","start":"next start"},"dependencies":{"next":"^14.2.35","node-fetch":"^3.3.0","potrace":"^2.1.1","react":"18.2.0","react-dom":"18.2.0","sharp":"^0.33.0","uuid":"^9.0.0"}}
